--- a/icds-constitution.tex
+++ b/icds-constitution.tex
@@ -5,14 +5,14 @@
 \usepackage{amsmath}
 \usepackage{xfrac}
 \usepackage{units}
-\usepackage{draftwatermark}
 
+\usepackage{draftwatermark}
 \SetWatermarkText{Draft}
 \SetWatermarkScale{1.5}
 
 \title{Imperial College Dramatic Society Constitution}
 % \author[The ICDS Committee]{The ICDS Committee}
-\date{Proposed revision March 2015}
+\date{Proposed at the Emergency General Meeting on 03/11/15}
 
 \newcommand{\policyOffset}{12pt}
 
@@ -67,7 +67,7 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
 
 \section{Membership}
 \begin{enumerate}[resume]
-    \item Membership of the Society is dichotomised into \textsc{Full Members} of the Society and \textsc{Non-Voting Members} of the Society.
+    \item Membership of the Society is split into \textsc{Full Members} of the Society and \textsc{Non-Voting Members} of the Society.
     \item \policyBye{B6} The voting membership of the Society is all of the Full Members of the Society.
     \item \policyCspp{67} Full Members of the Imperial College Union are exclusively able to become Full Members of the Society.
     \item \policyCspp{71} Associate Members of the Union may become Non-Voting Members of the Society.
@@ -84,8 +84,7 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
     \item The Committee shall have the power to resolve upon regulations and bye-laws as it sees fit, which may be enacted subservient to this constitution.
     \item All officers sitting on the Committee must be Members of the Society.
     \item \policyCspp{66} Any officer holding a voting position on the Committee must be a Full Member of the Society.
-    \item No officer may hold more than one position upon the Committee.
-    \item \policyCspp{65} The Committee shall consist of thirteen voting officers holding the following positions:
+    \item \policyCspp{65} The Committee shall consist of at most thirteen voting officers holding the following offices:
         \begin{enumerate}
             \item President
             \item Vice-President
@@ -101,6 +100,13 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
             \item Systems Administrator
             \item Ordinary Committee Member
         \end{enumerate}
+    \item Officers may hold more than one office, subject to the following restrictions:
+    	\begin{enumerate}
+            \item Technical offices are defined to be Technical Director, Lighting Director, Sound Director, Set, Props and Costumes Director, and Systems Administrator.
+            \item No officer holding one or more technical offices may hold a non-technical office.
+            \item No officer may hold more than one of President, Vice-President, and Treasurer.
+            \item The Ordinary Committee Member must not hold any other offices within the Society.
+        \end{enumerate}
     \item \policyCspp{65} The term of office for all positions runs from the 1st of August to the 31st of July.
     \item A position of office may be vacated by an officer: \begin{enumerate}
             \item Resigning
@@ -114,149 +120,82 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
 
 \subsection{Meetings of the Committee}
 \begin{enumerate}[resume]
-    \item Meetings of the Committee shall be called by the President, and shall be held at least monthly.
+    \item Meetings of the Committee shall be called by the President, and shall be held at least monthly during College term time.
     \item A meeting must be called by the President upon the request of any three members of the Committee.
     \item The President or their delegated authority shall chair meetings of the Committee.
-    \item At least five College days' written notice of meetings of the Committee shall be provided by the Secretary to members of the Committee.
-    \item Only members of the Committee holding one of the aforementioned voting positions may vote.
-    \item \policyBye{B11} Quorum of the Committee shall be 7.
-    \item Any Member of the Society may observe Committee meetings.
-    \item The Committee may invite other Members of the Society, other Members of the Union, or others outside of the Union as guests of the Committee, as it sees fit. 
+    \item At least five College days' written notice of planned meetings of the Committee shall be provided by the Secretary to members of the Committee.
+    \item Unplanned meetings may be held with shorter notice if there is a good reason to do so.
+    \item Only voting officers of the Committee may vote and attend Committee meetings, aside from exceptions made below.
+    \item \policyBye{B11} Quorum of the Committee shall be 50\%+1 of the officers of the Committee.
+    \item The Committee may invite other Members of the Society, other Members of the Union, or others outside of the Union as Guests of the Committee, as it sees fit. 
+    \item Any Member of the Society may observe Committee meetings as a Guest of the Committee.
     \item Guests of the Committee must ask permission from the Chair of the meeting to speak (ordinarily the President).
-    \item The Secretary or their delegated authority shall circulate agenda for meetings of the Committee no less than one College day in advance of the meeting, and must publish minutes of that meeting within three College days following the meeting. These minutes must either be accepted as a true and accurate record of the previous meeting at the next meeting of the Committee, or amended as appropriate.
+    \item The Secretary or their delegated authority shall circulate agenda for meetings of the Committee no less than one College day in advance of the meeting.
+    \item The Secretary must publish minutes of a meeting to the general public within ten College days of the minutes' approval as a true and accurate record of the meeting to which they refer by the Committee.
+    \item Members may submit a request to view non-reserved minutes which are yet to be approved by the Committee to the Committee. The Committee must then allow the member to view unapproved minutes within ten College days provided the minutes have first been shown to attendees of the meeting and any comments noted. It should be made clear that these minutes are unpublished and unapproved.
     \item An archive of all non-reserved meeting minutes should be made publicly available by the Secretary.
-    \item A member of the Committee may request at a meeting that minutes be denoted as reserved, either in part or in full.
-    \item Reserved minutes may be promulgated only to members of the Committee, and, upon request, to the President, a Deputy President, or the Chair of the Society's management group.
-    \item Whilst reserved minutes are being taken, non-members of the Committee may be asked to leave by the meeting's Chair.
-    \item Reserved minutes are to be made public and published 10 years after the meeting to which they relate.
+    \item A member of the Committee may request that minutes be denoted as reserved, either in part or in full, and reasons for the reservations should be included in either the unreserved minutes, the reserved minutes, or both. This request may be made at any time prior to publication.
+    \item Reserved minutes may be distributed only to members of the Committee, and, upon request, to the President, a Deputy President, or the Chair of the Society's management group.
+    \item Whilst reserved minutes are being taken, Guests of the Committee may be asked to leave by the meeting's Chair.
     \item Committee members must strive to attend all Meetings of the Committee, and are obliged to submit apologies to the Secretary if they are unable to do so for whatever reason.
 \end{enumerate}
 
 \subsection{Subcommittees}
 \begin{enumerate}[resume]
     \item The Committee may create further committees, without derogating from its responsibility, as its members see fit. Such committees shall be sub-committees of the Committee and shall be chaired and constituted as the Committee sees fit.
-    \item Any member of the Committee shall be entitled to sit on any sub-committee so created, and may do so upon successful supplication to the Committee.
+    \item Any member of the Committee shall be entitled to sit on any sub-committee so created, and may do so after informing the Committee as such.
     \item Such sub-committees shall not have decision making powers binding on the Society, but may make recommendations to the Committee.
     \item All members of sub-committees need only to be Members of the Union, not of the Society.
 \end{enumerate}
 
-\subsection{Officers}
+\subsection{Offices}
 \begin{enumerate}[resume]
     \item \newthought{The President:}
         \begin{enumerate}
             \item \policyCspp{8} shall be the senior officer of the Society.
-            \item shall represent the Society to other societies, the public, external bodies, and any body of the Union (such as the Arts and Entertainments Management Group).
-            \item is ultimately responsible for the artistic output of the Society.
             \item \policyCspp{83.i} shall be, along with the Treasurer, financially responsible for the Society.
             \item is responsible for ensuring that the Society is run according to this constitution.
             \item shall possess the casting vote in the event of a tie in a decision-making vote (as distinct from an election) at a Committee meeting or General Meeting of the Society.
             \item shall deputise or direct other members of the Committee to deputise for vacant positions, should this become necessary.
-            \item shall liaise with COMUS to further alumnus integration.
-            \item shall be responsible for ensuring that risks arising during the execution of the Society's activities are appropriately identified and mitigated.
             \item \policyHs{26.3.4} shall be responsible for informing the Union of any controls and provisions made to identify and mitigate risks to Society Members (to include the annual submission of a risk assessment).
-            \item shall be responsible for ensuring that all plays produced by the Society have assigned to them a \textsc{Producer}, who shall be a Member of the Society responsible for the execution of the play (to include its financial aspects), and who shall be answerable to the Committee. This Producer must not also be the show's director, except in the case of simple plays if considered appropriate by the committee.
-            \item the authority to authorise publicity may be revoked or further devolved as the President sees fit.
     \end{enumerate}
     \item \newthought{The Vice-President:}
         \begin{enumerate}
-            \item shall assist the President in the running of the Society.
             \item shall deputise for the President in their absence.
-            \item \policyPub{4} may, at the President's discretion, be delegated authority by the President to authorise publicity.
+            \item \policyPub{4} may be delegated authority by the President to authorise publicity.
         \end{enumerate}
     \item \newthought{The Treasurer:}
         \begin{enumerate}
             \item \policyCspp{83.i} shall be, along with the President, financially responsible for the Society.
-            \item shall carry out the day-to-day financial duties of the Society.
-            \item shall maintain accounts describing the Society's finances, in accordance with accepted accounting rules and practices.
-            \item shall ensure that an appropriately-qualified person (usually the Producer) keeps appropriate accounts for every show produced by the Society.
-            \item shall inspect the budget for every show produced by the Society, and if they deem it to be acceptable, approve it.
             \item shall be responsible for ensuring the long-term financial viability of the Society, by holding reserves or instigating other structural measures as may be necessary to safeguard the objectives of the Society.
             \item shall be responsible for participating in the Union's annual budgeting process.
         \end{enumerate}
     \item \newthought{The Honorary Secretary:}
         \begin{enumerate}
-            \item shall be responsible for minuting all meetings of the Society and maintaining a public archive of such minutes.
-            \item shall be responsible for keeping records of the running of the Society and maintaining its archives in good order.
-            \item shall be responsible for communicating announcements to the membership of the Society and the Committee.
-            \item shall be responsible for ensuring that all documentation required by the CSP Policy, \S83 are submitted as required.
-            \item \policyPub{4} may, at the President's discretion, be delegated authority by the President to authorise publicity.
+            \item \policyPub{4} may be delegated authority by the President to authorise publicity.
         \end{enumerate}
     \item \newthought{The Acting Director:}
         \begin{enumerate}
             \item shall have overall responsibility for the Society's acting, writing and directing activities.
-            \item shall have responsibility for the training of Members of the Society in fields relating to acting, to include the organisation of acting workshops.
             \item shall be responsible for ensuring that a Director can be found for the Society's plays, deputising if necessary.
-            \item shall be responsible for the Society's representation at drama festivals as directed by the Committee.
         \end{enumerate}
     \item \newthought{The Technical Director:}
         \begin{enumerate}
             \item shall have overall responsibility for the Society's technical activities.
             \item \policyCspEquip{A3, {\S}A5 \& {\S}B7} shall have overall responsibility for the Society's equipment, including its management and safe usage.
             \item shall ensure that the Society maintains an appropriate level of technical capability, in terms of both equipment and personnel, to enable the Society to achieve its objectives.
-            \item shall be responsible for the creation, regular review, and enforcement of a code of practice for technicians covering aspects of safety procedure and working practice, to which all Members of the Society must adhere.
             \item \policyCspEquip{A5.2 \& {\S}A5.3} shall be responsible overall for the training of Members in all aspects of the Society's technical activities.
             \item \policyCspEquip{C} shall ensure that all equipment is maintained and kept securely in good safe working order, and that records are kept of this maintenance and of the equipment owned by the Society.
             \item \policyCspEquip{A7} shall ensure that all equipment and storage is appropriately labelled.
-            \item shall be responsible for ensuring that a Production Manager is assigned to all external events, who shall be a Member of the Society answerable to the Committee for that event. An external event is one to which the Society contributes but which the Society does not principally control or fund.
             \item \policyCspEquip{A6} shall ensure that appropriate records are kept and fees are lodged with the Treasurer when equipment is hired.
-            \item shall be responsible for the maintenance of the DramSoc Storeroom.
-            \item shall be responsible for liaising with the Union over the management, maintenance and upkeep of the Union Concert Hall.
-            \item shall represent the Society to the Union, College, other societies, and any other clients for all relevant matters as described above.
-            \item shall be assisted in these aims and responsibilities by the Lighting Director, the Sound Director and the Set, Props and Costumes Director as described below.
         \end{enumerate}
-    \item \newthought{The Lighting Director:}
-        \begin{enumerate}
-            \item shall have general responsibility for the Society's lighting equipment.
-            \item shall be responsible for the maintenance of the Society's lighting equipment.
-            \item shall be responsible for advising the Committee on the maintenance of an appropriate level of technical capability in the lighting department.
-            \item shall be responsible for the training of other Members of the Society in fields relating to lighting design and engineering.
-        \end{enumerate}
-    \item \newthought{The Sound Director:}
-        \begin{enumerate}
-            \item shall have general responsibility for the Society's sound equipment.
-            \item shall be responsible for the maintenance of the Society's sound equipment.
-            \item shall be responsible for advising the Committee on the maintenance of an appropriate level of technical capability in the sound department.
-            \item shall be responsible for the training of other Members of the Society in fields relating to sound design and engineering.
-        \end{enumerate}
-    \item \newthought{The Set, Props and Costumes Director:}
-        \begin{enumerate}
-            \item shall be responsible for the storage and upkeep of the Society's props, costumes, and items of set.
-            \item shall be responsible for the upkeep of the Society's prop, costume, and set storage spaces.
-            \item shall be responsible for the management and maintenance of all construction tools and instructing Members on their correct and safe use.
-            \item shall provide support, guidance and assistance to set, prop and costume designers for the Society's shows.
-            \item shall manage the hire of set, costumes and props to other Union bodies and to external parties.
-        \end{enumerate} \pagebreak[2]
     \item \newthought{The Pub. Officer:}
         \begin{enumerate}
-            \item shall be responsible for ensuring that the Society and its activities are publicised to Members of the College.
-            \item shall be responsible for the design of the Society's publicity materials.
-            \item shall maintain a coherent and consistent brand image for the Society.
-            \item shall ensure that publicity is orchestrated for the Society's plays.
-            \item shall be responsible for maintaining the content of the Society's website.
-            \item shall be responsible for managing the Society's social media accounts.
-            \item shall be responsible for the production of Society merchandise.
-            \item shall ensure that photographs are taken and archived of every Society show, along with that show's publicity material.
-            \item \policyPub{4} may, at the President's discretion, be delegated authority by the President to authorise publicity.
+            \item \policyPub{4} may be delegated authority by the President to authorise publicity.
         \end{enumerate}
     \item \newthought{The Social Secretary:}
         \begin{enumerate}
-            \item shall be responsible for the organisation of social events to promote the cohesion and happiness of the Members of the Society.
-            \item shall provide compulsory fun.
-        \end{enumerate}
-    \item \newthought{The Systems Administrator:}
-        \begin{enumerate}
-            \item shall be responsible for the design, upkeep, security and maintenance of the computer systems and networks utilised in the day-to-day running of the Society, to include:
-                \begin{enumerate}
-                    \item Servers
-                    \item Workstations
-                    \item Routers and switches
-                    \item E-Mail accounts
-                    \item Mailing lists
-                    \item Domains and DNS records
-                    \item Printers
-                    \item Other information systems as may from time to time become necessary, as directed by the Committee.
-                \end{enumerate}
-            \item shall assist the Pub. Officer in the maintenance of the website by providing them with the necessary tools to update it.
+            \item shall provide mandatory fun.
         \end{enumerate}
     \item \newthought{The Ordinary Committee Member:}
         \begin{enumerate}
@@ -273,12 +212,13 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
             \item a petition of ten or more Members made to the President in writing.
         \end{enumerate}
     \item General meetings may only be called during undergraduate term time, and must take place on, or in close vicinity of, the South Kensington campus.
-    \item A General Meeting may not be called to start after 2100 or before 1200.
+    \item A General Meeting may not be called to start after 2100 or before 1000.
     \item No fewer than ten College days' notice of a general meeting must be given in writing to Members of the Society.
     \item Members may submit agenda for discussion at a general meeting to the Secretary no fewer than five College days before a general meeting. Any agendum so submitted must be proposed by a Member and seconded by at least two other Members.
-    \item The Secretary must promulgate the agenda for the General meeting to the Members of the Society in writing no fewer than four College days in advance of a general meeting.
+    \item The Secretary must distribute the agenda for the General meeting to the Members of the Society in writing no fewer than four College days in advance of a general meeting.
     \item The first agendum of any general meeting must be to accept or reject by vote the minutes of the previous general meeting, or to note any corrections as upheld by vote if necessary.
-    \item The Secretary or their delegated authority must record accurate minutes of the General meeting, which must be published in writing to the Members of the Society no greater than three College days subsequent to the meeting.
+    \item The Secretary or their delegated authority must record accurate minutes of the General meeting, which must be published in writing to the Members of the Society only at a time prior to the next meeting.
+    \item The Secretary or their delegated authority must publish to the general public minutes which have been accepted at a General Meeting.
     \item Any Member of the Society may submit an opinion on any agenda to the Secretary \textit{in absentia}, which must be read out at the meeting by the Secretary in their stead.
     \item All decisions are made exclusively by the voting membership of the Society.
     \item \policyBye{B11} Quorum shall be 50\% + 1 of the full Members of the Society, who must be present in person or by appointed proxy.
@@ -300,7 +240,7 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
             \item must be a Member of the Union.
             \item must open nominations for the election no fewer than five College days in advance of the AGM.
             \item must provide a publicly accessible form for the nomination and seconding of candidates.
-            \item must promulgate to all Members of the Society via the Secretary details of the arrangements for balloting, nomination and complaints no fewer than ten College days in advance of the AGM.
+            \item must distribute to all Members of the Society via the Secretary details of the arrangements for balloting, nomination and complaints no fewer than ten College days in advance of the AGM.
         \end{enumerate}
     \item Only voting Members of the Society may cast votes in the election.
     \item The vote to `Re-Open Nominations' shall be represented by Mistifer Cat in each election.
@@ -330,7 +270,7 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
     \item \policyBye{B6,} \policyCspp{81} This document serves as the constitution for the Imperial College Dramatic Society.
     \item \policyCspp{36} Changes to this constitution may be made solely at a quorate General Meeting of the Society by a $\sfrac{2}{3}$ majority vote.
     \item This constitution shall be reviewed annually by the Committee.
-    \item Any proposal to change this constitution must be made in writing to the Secretary as part of an agendum proposal for the General Meeting in question, who shall subsequently promulgate the proposed change as an addendum to the agendum according to the schedule set out above.
+    \item Any proposal to change this constitution must be made in writing to the Secretary as part of an agendum proposal for the General Meeting in question, who shall subsequently distribute the proposed change as an addendum to the agendum according to the schedule set out above.
     \item For the avoidance of doubt, since {\S}B16 of the bye-laws requires any electronic vote taken as a consequence of and subsequent to an inquorate meeting to obtain only a simple majority to pass, changes to this constitution cannot be ratified via this mechanism, and nor can any other decision that requires a two-thirds majority.
     \item This constitution is binding on the Society, the Committee, and its members.
     \item This constitution must be published publicly, and provided in full to any Member of the Union who requests it.
